--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "npm install --prefix server && npm run build --prefix server && cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "npm install --prefix server",
   "framework": null,
   "rewrites": [
     {
