Configure for Railway + Vercel deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,23 @@
-# x402 Payment Configuration
-FACILITATOR_URL=https://x402.org/facilitator
-NETWORK=base-sepolia
+# Server Environment Variables
+
+# Your wallet address for receiving payments (REQUIRED)
 ADDRESS=0xYourWalletAddressHere
+
+# OpenAI API key for fortune generation (REQUIRED)
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# Network configuration (optional, defaults to base-sepolia)
+NETWORK=base-sepolia
+
+# Port (optional, defaults to 3001, Railway will set this automatically)
 PORT=3001
 
-# OpenAI API Key
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# x402 Facilitator URL (optional, defaults to https://x402.org/facilitator)
+FACILITATOR_URL=https://x402.org/facilitator
+
+# Frontend URL for CORS (optional, but recommended for production)
+# Set this to your Vercel frontend URL after deployment
+FRONTEND_URL=https://your-app.vercel.app
+
+# Node environment
+NODE_ENV=production
