--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,4 @@
-# API Base URL (for production, set this to your Vercel API URL)
-# Leave empty for localhost:3001 during development
-VITE_API_BASE_URL=
+# API Backend URL
+# For local development, use: http://localhost:3001
+# For production, use your Railway backend URL
+VITE_API_BASE_URL=http://localhost:3001
